# daemon-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PRD-current.md  PRD.md  README.md  plan.md
.cargo-husky/hooks/: pre-push
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
examples/: cli.rs  common.rs  concurrent.rs  file_processor.rs  file_processor_daemon.rs  file_processor_demo.rs  test_daemon.rs
examples/common/: mod.rs
src/: client.rs  client_tests.rs  connection.rs  error_context.rs  lib.rs  lib_tests.rs  process.rs  server.rs  server_tests.rs  terminal.rs  tests.rs  transport.rs
tests/: integration_test.rs  integration_tests.rs  version_tests.rs
