[package]
name = "daemon-rpc"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.0"
serde_json = "1.0"
scopeguard = "1.0"

[[example]]
name = "cli"
path = "examples/cli.rs"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
