[package]
name = "daemon-cli"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.0"
serde_json = "1.0"
scopeguard = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
terminal_size = "0.4"
supports-color = "3.0"
interprocess = { version = "2.2", features = ["tokio"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[[example]]
name = "cli"
path = "examples/cli.rs"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
